# trucoshi-rs

./: .dockerignore  .env.dev.example  .gitignore  Cargo.toml  DEPLOYING.md  Dockerfile  PROJECT.md  README.md  docker-compose.dev.yml  package-lock.json  package.json
crates-auth/: Cargo.toml
crates-auth/src/: jwt.rs  lib.rs  seed.rs  tokens.rs
crates-game/: Cargo.toml
crates-game/src/: lib.rs  types.rs
crates-realtime/: Cargo.toml
crates-realtime/src/: history.rs  lib.rs  server.rs
crates-realtime/src/protocol/ws/v2/: envelope.rs  error.rs  json_schema.rs  messages.rs  mod.rs  schema.rs  tests.rs
crates-server/: Cargo.toml
crates-server/bin-http/: Cargo.toml
crates-server/bin-http/src/: game_history.rs  mailer.rs  main.rs  twitter_placeholder.md
crates-server/src/: http.rs  lib.rs
crates-server/src/tournaments/: repo.rs  types.rs
crates-store/: Cargo.toml
crates-store/src/: game_history.rs  lib.rs  migrate.rs
crates-ws-schema-check/: Cargo.toml
crates-ws-schema-check/src/: lib.rs
migrations/: 0001_init.sql  0002_tournaments.sql  0003_game_history.sql  0004_game_history_ws_match_id.sql  0005_account_recovery.sql  0006_seed_auth.sql
schemas/ws/v2/: README.md  c2s.json  c2s.ts  in.json  in.ts  out.json  out.ts  s2c.json  s2c.ts
scripts/: gen-ws-schema.mjs  gen-ws-types.mjs
