[workspace]
resolver = "2"
members = [
  "crates-auth",
  "crates-store",
  "crates-game",
  "crates-realtime",
  "crates-ws-schema-check",
  "crates-server",
  "crates-server/bin-http",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
time = { version = "0.3", features = ["macros", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# urllib removed
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
headers = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.10"
base64 = "0.22"
futures-util = "0.3"
