[package]
name = "trucoshi-http"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
headers = { workspace = true }
tower-http = { workspace = true }
trucoshi-auth = { path = "../../crates-auth" }
trucoshi-store = { path = "../../crates-store" }
trucoshi-realtime = { path = "../../crates-realtime" }
trucoshi-server = { path = ".." }
sqlx = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
lettre = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
